2003-11-25 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b34

	* Bugfix: Multilanguage was not disabled when in Linux, with gettext and
		  found locales were not suitable.

	* Change: Wording to make sure we are talking about <b>system<b> locales.

2003-11-24  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b33

	* Fixed bug where site wide slide show ran out of memory.

2003-11-24 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b32

	* Bugfix: remove '' around popup url as we use now "".
		  (Bug was introduced in b31)

2003-11-24 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b31

	* Change: Layout of check_versions.

	* Change: Layout of Config step 2 and 3.

	* "Bugfix": Corrected a lot HTML errors. Added quotes etc.

2003-11-22  Chris Schwerdt  <muti@afterglo.ws> 1.4.2-cvs-b30

	* Re-organized gallery_remote2.php.  Each command now has
	  its own function call instead of being compared
	  sequentially.

2003-11-22  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b29

	* Spelling corrections.

	* Improvements to shadows frame. Should this go into 1.4.1?

2003-11-20  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.2-cvs-b28

	* Updated EZ Prints form to new API in view_photo.php.

2003-11-20  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b27

	* More tweaks to the check_versions.php text.

2003-11-20  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b26

	* Fixed typo in check_versions.php

2003-11-20  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b25

	* Reformat output of check_versions.php to make it more amenable to 
	  style sheets.

2003-11-19  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b24

        * Added check_versions to gallery check page, to check that gallery
          is up-to-date before running.

	* Default to high tech slide show unless we know it won't work.

        * Moved checkVersions() to util.php, and fixed a logical bug in it.

        * Modified checkVersions to return ($success, $fail, $warn)
