@@ -1,3 +1,8 @@
+2003-11-26 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b35
+
+	* Bugfix: "get rid of resized" didnt work if translated button label
+		  contained htmlentities.
+
 2003-11-25 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b34
 
 	* Bugfix: Multilanguage was not disabled when in Linux, with gettext and
